--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       .header {
         display: flex;
         justify-content: space-between;
+        padding: 11px 0 5px 20px;
         background-color: orange;
+        
       }
       .row {
         display: flex;
@@ -26,6 +28,7 @@
         background-color: white;
         margin: 20px;
         width: 300px;
+        border-radius: 5px;
 
       }
       li {
@@ -37,10 +40,12 @@
         text-decoration: none;
       }
       a:hover {
+
         text-decoration: underline;
       }
 img {
   width: 300px;
+  border-radius: 5px;
 }
 .row .box .product {
   padding:10px
@@ -57,6 +62,7 @@ img {
             <li><a href="#">Service</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
+            <li><a href="login.html">Login</a></li>
             <!-- <li><a href="https://forms.gle/p7zabRFzgHHMccnY8">GitHub A</a></li>
             <li><a href="https://forms.gle/o9D6EFkbVHzdVKL18">GitHub B</a></li>
    -->
